--- a/index.html
+++ b/index.html
@@ -40,8 +40,21 @@
     <link href="assets/css/style.css" rel="stylesheet" />
   </head>
   <body>
-    This is body
-
+    <!-- ======= Top Bar ======= -->
+    <div id="topbar" class="d-flex align-items-center fixed-top">
+      <div
+        class="container d-flex justify-content-center justify-content-md-between"
+      >
+        <div class="contact-info d-flex align-items-center">
+          <i class="bi bi-phone d-flex align-items-center"
+            ><span>+1 5844 32568 11</span></i
+          >
+          <i class="bi bi-clock d-flex align-items-center ms-4"
+            ><span> Mon-Sat: 11AM - 23PM</span></i
+          >
+        </div>
+      </div>
+    </div>
     <div id="preloader"></div>
     <a
       href="#"
