--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         class="container-fluid container-xl d-flex align-items-center justify-content-lg-between"
       >
         <h1 class="logo me-auto me-lg-0">
-          <a href="index.html">Restaurantly</a>
+          <a href="index.html">Dine Inn</a>
         </h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
@@ -84,7 +84,7 @@
         <a
           href="#book-a-table"
           class="book-a-table-btn scrollto d-none d-lg-flex"
-          >Book a table</a
+          >Reserve a table</a
         >
       </div>
     </header>
@@ -98,8 +98,8 @@
       >
         <div class="row">
           <div class="col-lg-8">
-            <h1>Welcome to <span>Restaurantly</span></h1>
-            <h2>Delivering great food for more than 18 years!</h2>
+            <h1>Welcome to <span>Dine Inn</span></h1>
+            <h2>Delivering great taste for more than 14 years!</h2>
 
             <div class="btns">
               <a href="#menu" class="btn-menu animated fadeInUp scrollto"
@@ -108,7 +108,7 @@
               <a
                 href="#book-a-table"
                 class="btn-book animated fadeInUp scrollto"
-                >Book a Table</a
+                >Reserve a Table</a
               >
             </div>
           </div>
