--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="assets/css/custom.css" />
   </head>
   <body>
     <!-- ======= Top Bar ======= -->
@@ -141,37 +142,21 @@
                 <img src="assets/img/about.jpg" alt="" />
               </div>
             </div>
-            <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-              <h3>
-                Voluptatem dignissimos provident quasi corporis voluptates sit
-                assumenda.
-              </h3>
-              <p class="fst-italic">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              </p>
-              <ul>
-                <li>
-                  <i class="bi bi-check-circle"></i> Ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat.
-                </li>
-                <li>
-                  <i class="bi bi-check-circle"></i> Duis aute irure dolor in
-                  reprehenderit in voluptate velit.
-                </li>
-                <li>
-                  <i class="bi bi-check-circle"></i> Ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat. Duis aute irure dolor in
-                  reprehenderit in voluptate trideta storacalaperda mastiro
-                  dolore eu fugiat nulla pariatur.
-                </li>
-              </ul>
-              <p>
-                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                aute irure dolor in reprehenderit in voluptate velit esse cillum
-                dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                cupidatat non proident, sunt in culpa qui officia deserunt
-                mollit anim id est laborum
+            <div
+              class="col-lg-6 pt-4 pt-lg-0 d-flex flex-column align-items-cente justify-content-center order-2 order-lg-1 content"
+            >
+              <h2 class="mb-4 about-h4">About Us</h2>
+
+              <p class="about-p">
+                Dine Inn is one of the country’s most celebrated restaurants;
+                the creation of leading Australian restaurant group, Fink, and
+                Executive Chef Peter Gilmore.The restaurant is an organic space
+                reflective of Peter Gilmore’s nature inspired cuisine. The
+                interplay of textures and colour brings life and a vibrance that
+                embraces the restaurant’s place in the dress circle of Sydney
+                Harbour. An ode to the Australian landscape, from the vast ocean
+                floor, to the cracked bark of a paperbark tree, every detail
+                from the ground up has been thoughtfully considered.
               </p>
             </div>
           </div>
@@ -180,7 +165,7 @@
       <!-- End About Section -->
 
       <!-- ======= Why Us Section ======= -->
-      <section id="why-us" class="why-us">
+      <!-- <section id="why-us" class="why-us">
         <div class="container" data-aos="fade-up">
           <div class="section-title">
             <h2>Why Us</h2>
@@ -222,7 +207,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- End Why Us Section -->
       <!-- ======= Menu Section ======= -->
       <section id="menu" class="menu section-bg">
@@ -255,35 +240,21 @@
                 alt=""
               />
               <div class="menu-content">
-                <a href="#">Lobster Bisque</a><span>$5.95</span>
+                <a href="#">Lobster Bisque</a><span>$7.55</span>
               </div>
               <div class="menu-ingredients">
-                Lorem, deren, trataro, filede, nerada
-              </div>
-            </div>
-
-            <div class="col-lg-6 menu-item filter-specialty">
-              <img
-                src="assets/img/menu/bread-barrel.jpg"
-                class="menu-img"
-                alt=""
-              />
-              <div class="menu-content">
-                <a href="#">Bread Barrel</a><span>$6.95</span>
-              </div>
-              <div class="menu-ingredients">
-                Lorem, deren, trataro, filede, nerada
+                Thick cream soup that chefs purée and strain for a fine, smooth
+                final result
               </div>
             </div>
 
             <div class="col-lg-6 menu-item filter-starters">
               <img src="assets/img/menu/cake.jpg" class="menu-img" alt="" />
               <div class="menu-content">
-                <a href="#">Crab Cake</a><span>$7.95</span>
+                <a href="#">Crab Cake</a><span>$9.95</span>
               </div>
               <div class="menu-ingredients">
-                A delicate crab cake served on a toasted roll with lettuce and
-                tartar sauce
+                Crab cakes are always in the appetizers of fancy seafood.
               </div>
             </div>
 
@@ -293,7 +264,8 @@
                 <a href="#">Caesar Selections</a><span>$8.95</span>
               </div>
               <div class="menu-ingredients">
-                Lorem, deren, trataro, filede, nerada
+                Our salad comes with Lettuce, roasted Chicken Breast, Parmesan
+                Cheese and Caesar dressing
               </div>
             </div>
 
@@ -322,7 +294,8 @@
                 <a href="#">Mozzarella Stick</a><span>$4.95</span>
               </div>
               <div class="menu-ingredients">
-                Lorem, deren, trataro, filede, nerada
+                Mozzarella sticks are prepared by coating cheese strings in
+                breadcrumbs or batter
               </div>
             </div>
 
